responsive mobile 414px

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                         <i class="fas fa-bars"></i>
                                     </button>
                                 </div>
-                                
+
                             </div>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                         <div class="col-lg-2">
                             <h3 class="title-featured">Featured titles</h3>
                         </div>
-                        <div class="col-lg-10">
+                        <div class="col-lg-10 slider-featured">
                             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0"
@@ -305,7 +305,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <h3 class="newest-titles">Newest Titles</h3>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-xs-12">
                             <div class="container-newest">
                                 <img src="img/slider-kosmik.jpg" alt="Avatar" class="image-newest">
                                 <div class="overlay-newest">
@@ -314,7 +314,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-xs-12">
                             <div class="container-newest">
                                 <img src="img/slider-kosmik-2.jpg" alt="Avatar" class="image-newest">
                                 <div class="overlay-newest">
@@ -393,7 +393,7 @@
                             <h3>Contact</h3>
                         </div>
                     </div>
-                    <div class="col-lg-9">
+                    <div class="col-lg-9 col-xs-12">
                         <div class="information-contact">
                             <h3>Kosmik Network</h3>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos amet repudiandae voluptate
@@ -414,8 +414,8 @@
         <footer id="footer" class="footer-texts-more-lighten">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0 list-logo-footer">
-                        <img src="img/logo-kosmik.png" alt="" srcset="">
+                    <div class="col-md-6 col-lg-3 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
+                        <img src="img/logo-kosmik.png" class="logo-footer" alt="" srcset="">
                         <ul class="list list-unstyled mb-0">
                             <li class="mb-0"><a href="#">About</a></li>
                             <li class="mb-0"><a href="#">Catalog</a></li>
@@ -423,7 +423,7 @@
                             <li class="mb-0"><a href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0 list-sosial-media-footer">
+                    <div class="col-md-6 col-lg-4 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
                         <ul class="list list-unstyled mb-0">
                             <li class="mb-0"><a href="#">Instagram</a></li>
                             <li class="mb-0"><a href="#">Facebook</a></li>
