--- a/index.html
+++ b/index.html
@@ -118,7 +118,16 @@
                                         <nav class="collapse">
                                             <ul class="nav nav-pills" id="mainNav">
                                                 <li>
-                                                    test
+                                                    About
+                                                </li>
+                                                <li>
+                                                    Catalog
+                                                </li>
+                                                <li>
+                                                    News
+                                                </li>
+                                                <li>
+                                                    Contact
                                                 </li>
                                             </ul>
                                         </nav>
@@ -374,7 +383,39 @@
                         <div class="title-new-funfact">
                             <h3>News</h3>
                             <p>Funfact</p>
+                            <p style="font-size: 16px; font-weight: 300; color: #4d4d4d;">25 Jan 2022 by Lorem Ipsum</p>
+                            <h1>JUDUL ARTIKEL
+                                LOREM IPSUM
+                                DOLOR SIT AMET SUI</h1>
+                            <p style="font-size: 24px; font-weight: unset; margin-top: 35px;">Lorem ipsum dolor sit
+                                amet,
+                                consectetuer adipiscing elit,
+                                sed diam nonummy nibh
+                                euismod tincidunt ut</p>
                         </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="owl-carousel owl-theme nav-inside nav-style-1 nav-light"
+                            data-plugin-options="{'items': 1, 'margin': 10, 'loop': false, 'nav': true, 'dots': false}">
+                            <div>
+                                <div class="img-thumbnail border-0 p-0 d-block">
+                                    <img class="img-fluid border-radius-0 img-news" src="img/slider-kosmik.jpg" alt="">
+                                </div>
+                            </div>
+                            <div>
+                                <div class="img-thumbnail border-0 p-0 d-block">
+                                    <img class="img-fluid border-radius-0 img-news" src="img/slider-kosmik-2.jpg"
+                                        alt="">
+                                </div>
+                            </div>
+                            <div>
+                                <div class="img-thumbnail border-0 p-0 d-block">
+                                    <img class="img-fluid border-radius-0 img-news" src="img/slider-kosmik-3.jpg"
+                                        alt="">
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="span9 btn-block">
                         <button class="btn btn-large btn-block btn-primary" type="button">More News <span
