--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
                                         <nav class="collapse">
                                             <ul class="nav nav-pills" id="mainNav">
                                                 <li>
-                                                    About
+                                                    <a href="about.html">About</a>
                                                 </li>
                                                 <li>
-                                                    Catalog
+                                                    <a href="#">Catalog</a>
                                                 </li>
                                                 <li>
-                                                    News
+                                                    <a href="#">News</a>
                                                 </li>
                                                 <li>
-                                                    Contact
+                                                    <a href="#">Contact</a>
                                                 </li>
                                             </ul>
                                         </nav>
@@ -188,7 +188,8 @@
                         <div class="header-row flex-row justify-content-center py-5">
                             <div class="header-logo">
                                 <a href="index.html">
-                                    <img alt="Porto" width="100" height="48" src="img/logo-kosmik.png">
+                                    <img alt="Porto" width="100" height="48" src="img/logo-kosmik.png"
+                                        class="logo-menu-side">
                                 </a>
                             </div>
                         </div>
