--- a/about.html
+++ b/about.html
@@ -317,7 +317,7 @@
         </section>
 
 
-        <section class="py-5 section-our-team">
+        <!-- <section class="py-5 section-our-team">
             <div class="container-fluid">
                 <div class="title-our-team">
                     <h3>Our Team</h3>
@@ -405,60 +405,170 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <footer id="footer" class="footer-texts-more-lighten">
+        <section class="py-5 section-our-team">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6 col-lg-3 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
-                        <img src="img/logo-kosmik.png" class="logo-footer" alt="" srcset="">
-                        <ul class="list list-unstyled mb-0">
-                            <li class="mb-0"><a href="#">About</a></li>
-                            <li class="mb-0"><a href="#">Catalog</a></li>
-                            <li class="mb-0"><a href="#">News</a></li>
-                            <li class="mb-0"><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 col-lg-4 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
-                        <ul class="list list-unstyled mb-0">
-                            <li class="mb-0"><a href="#">Instagram</a></li>
-                            <li class="mb-0"><a href="#">Facebook</a></li>
-                            <li class="mb-0"><a href="#">Twitter</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 col-lg-3 list-bussiness-footer">
-                        <h6>Bussiness :</h6>
-                        <p>email bussiness kosmik@gmail.com</p>
-                        <p>+62 888 xxxx xxxx</p>
-                    </div>
-                </div>
-            </div>
-            <div class="container-fluid">
-                <div class="footer-copyright footer-copyright-style-2 pt-4 pb-5">
-                    <div class="row">
-                        <div class="col-12">
-                            <p class="mb-0">© Kosmik 2022. All Rights Reserved</p>
+                    <div class="col-lg-6">
+                        <div class="title-our-team">
+                            <h3>Our Team</h3>
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-12">
+                    <div uk-slider>
+                        <div class="arrow-slider-team">
+                            <a href="#" uk-slider-item="previous"><span
+                                    class="glyphicon glyphicon-triangle-left"></span></a>
+                            <a href="#" uk-slider-item="next"><span
+                                    class="glyphicon glyphicon-triangle-right"></span></a>
+                        </div>
+                        <ul
+                            class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-light">
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                            <li class="uk-transition-toggle" tabindex="0">
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
+                                    class="img-before-hover">
+                                <div class="uk-position-center uk-panel">
+                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
+                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
+                                </div>
+                            </li>
+                        </ul>
+
+                        <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+
+                    </div>
+                </div>
             </div>
-        </footer>
+    </div>
+    </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer id="footer" class="footer-texts-more-lighten">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 col-lg-3 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
+                    <img src="img/logo-kosmik.png" class="logo-footer" alt="" srcset="">
+                    <ul class="list list-unstyled mb-0">
+                        <li class="mb-0"><a href="#">About</a></li>
+                        <li class="mb-0"><a href="#">Catalog</a></li>
+                        <li class="mb-0"><a href="#">News</a></li>
+                        <li class="mb-0"><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 col-lg-4 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
+                    <ul class="list list-unstyled mb-0">
+                        <li class="mb-0"><a href="#">Instagram</a></li>
+                        <li class="mb-0"><a href="#">Facebook</a></li>
+                        <li class="mb-0"><a href="#">Twitter</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 col-lg-3 list-bussiness-footer">
+                    <h6>Bussiness :</h6>
+                    <p>email bussiness kosmik@gmail.com</p>
+                    <p>+62 888 xxxx xxxx</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="footer-copyright footer-copyright-style-2 pt-4 pb-5">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="mb-0">© Kosmik 2022. All Rights Reserved</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     </div>
 
 
