--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/css/uikit.min.css" />
 
+    <!-- icon bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
     <!-- Head Libs -->
     <script src="vendor/modernizr/modernizr.min.js"></script>
@@ -77,7 +79,7 @@
         <div class="side-header-narrow-bar desktop">
             <div class="side-header-narrow-bar-logo bg-color-primary d-flex justify-content-center">
                 <a href="index.html" class="p-3 mb-4 mt-2">
-                    <img alt="Porto" width="40" height="40" src="img/logo-planet.png">
+                    <img alt="Porto" width="40" height="40" src="img/logo-planet.png" class="logo-planet">
                 </a>
             </div>
             <div class="side-header-narrow-bar-content d-flex align-items-center text-center h-100">
@@ -168,14 +170,11 @@
                             <li>
                                 <a href="#" class="menu">Contact</a>
                             </li>
-                            <li>
-                                <form action="/action_page.php" class="search-menu">
-                                    <input type="text" class="search-home" placeholder="What are you looking for?"
-                                        name="search">
-                                    <button type="submit" class="button-search-home"><i
-                                            class="fa fa-search"></i></button>
-                                </form>
-                            </li>
+                            <form action="/action_page.php" class="search-menu">
+                                <input type="text" class="search-home" placeholder="What are you looking for?"
+                                    name="search">
+                                <button type="submit" class="button-search-home"><i class="fa fa-search"></i></button>
+                            </form>
                         </ul>
                     </nav>
                 </div>
@@ -202,9 +201,9 @@
                                         <ul class="nav nav-pills" id="mainNav">
                                             <li>
                                                 <form action="/action_page.php" class="search-menu">
-                                                    <input type="text" class="search-home"
+                                                    <input type="text" class="search-home-hamburger"
                                                         placeholder="What are you looking for?" name="search">
-                                                    <button type="submit" class="button-search-home"><i
+                                                    <button type="submit" class="button-search-home-hamburger"><i
                                                             class="fa fa-search"></i></button>
                                                 </form>
                                             </li>
@@ -225,14 +224,16 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="header-row justify-content-end pb-3">
+                        <div class="header-row justify-content-end pb-3 social-hamburger">
+                            <p>Follow us on</p>
                             <ul class="header-social-icons social-icons social-icons-clean">
-                                <li class="social-icons-facebook"><a href="https://www.facebook.com/" target="_blank"
-                                        title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                                <li class="social-icons-twitter"><a href="https://www.twitter.com/" target="_blank"
-                                        title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                                <li class="social-icons-linkedin"><a href="https://www.linkedin.com/" target="_blank"
-                                        title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="https://www.facebook.com/" target="_blank" title="Facebook"><i
+                                            class="bi bi-instagram"></i></a></li>
+                                <li><a href="https://www.twitter.com/" target="_blank" title="Twitter"><i
+                                            class="bi bi-facebook"></i></a></li>
+                                <li><a href="https://www.linkedin.com/" target="_blank" title="Linkedin"><i
+                                            class="bi bi-twitter"></i>
+                                    </a></li>
                             </ul>
                         </div>
                     </div>
@@ -315,7 +316,7 @@
                     </div>
                 </div>
             </section>
-            <section class="py-5" style="border-bottom: 1px solid #000;">
+            <section class="py-5 newest" style="border-bottom: 1px solid #000;">
                 <div class="container-fluid">
                     <div class="row">
                         <h3 class="newest-titles">Newest Titles</h3>
@@ -345,7 +346,7 @@
                     </div>
             </section>
 
-            <section class="py-5" style="border-bottom: 1px solid #000;">
+            <section class="py-5 about-home" style="border-bottom: 1px solid #000;">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-2">
@@ -381,7 +382,7 @@
             </section>
         </div>
 
-        <section class="py-5" style="border-bottom: 1px solid #000">
+        <section class="py-5 news-home" style="border-bottom: 1px solid #000">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-4">
@@ -468,7 +469,7 @@
             </div>
         </section>
 
-        <section class="py-5">
+        <section class="py-5 contact-home">
             <div class="container-fluid">
                 <div class="row">
                     <img src="img/slider-kosmik-3.jpg" class="img-fluid img-contact" alt="...">
