--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 
         <div role="main" class="main">
-            <div class="slider-container rev_slider_wrapper" style="height: 100vh;">
+            <div class="slider-container rev_slider_wrapper">
                 <div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider
                     data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 3000, 'gridwidth': 1170, 'gridheight': 700, 'disableProgressBar': 'on', 'responsiveLevels': [4096,1200,992,500], 'navigation' : {'arrows': { 'enable': false, 'style': 'arrows-style-1 arrows-primary' }, 'bullets': {'enable': false, 'style': 'bullets-style-1', 'h_align': 'center', 'v_align': 'bottom', 'space': 7, 'v_offset': 70, 'h_offset': 0}}}">
                     <ul>
