--- a/index.html
+++ b/index.html
@@ -253,12 +253,18 @@
                         </li>
                     </ul>
                 </div>
+                <div class="arrow-banner">
+                    <a href="#featured">
+                        <i class="bi bi-chevron-compact-down"></i>
+                    </a>
+                </div>
             </div>
 
-            <section class="featured">
+            <section class="featured" id="featured">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
+                            <img src="img/doodle-kosmik-1.png" alt="" class="img-doodle-1">
                             <h5 class="tag-featured">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda itaque doloremque
                                 aut officiis magni, autem architecto libero mollitia. Necessitatibus velit doloribus
@@ -279,25 +285,25 @@
                                         aria-label="Slide 3"></button>
                                 </div>
                                 <div class="carousel-inner">
-                                    <div class="carousel-item active" data-bs-interval="3000">
+                                    <div class="carousel-item active" data-bs-interval="10000">
                                         <img src="img/slider-kosmik-2.jpg" class="d-block w-100 img-featured" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h1>Judul Karya</h1>
-                                            <p>kreator</p>
+                                        <div class="carousel-caption d-none d-md-block content-slider-featured">
+                                            <h1>Code Helix</h1>
+                                            <p>by Nikki Dibya Wardhana, Bryan Arfiandy</p>
                                         </div>
                                     </div>
-                                    <div class="carousel-item" data-bs-interval="3000">
+                                    <div class="carousel-item" data-bs-interval="10000">
                                         <img src="img/slider-kosmik-3.jpg" class="d-block w-100 img-featured" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h1>Judul Karya</h1>
-                                            <p>kreator</p>
+                                        <div class="carousel-caption d-none d-md-block  content-slider-featured">
+                                            <h1>Code Helix</h1>
+                                            <p>by Nikki Dibya Wardhana, Bryan Arfiandy</p>
                                         </div>
                                     </div>
-                                    <div class="carousel-item" data-bs-interval="3000">
+                                    <div class="carousel-item" data-bs-interval="10000">
                                         <img src="img/slider-kosmik.jpg" class="d-block w-100 img-featured" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h1>Judul Karya</h1>
-                                            <p>kreator</p>
+                                        <div class="carousel-caption d-none d-md-block  content-slider-featured">
+                                            <h1>Code Helix</h1>
+                                            <p>by Nikki Dibya Wardhana, Bryan Arfiandy</p>
                                         </div>
                                     </div>
                                 </div>
@@ -385,7 +391,7 @@
         <section class="py-5 news-home" style="border-bottom: 1px solid #000">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <div class="title-new-funfact">
                             <h3>News</h3>
                             <p>Funfact</p>
@@ -393,14 +399,15 @@
                             <h1>JUDUL ARTIKEL
                                 LOREM IPSUM
                                 DOLOR SIT AMET SUI</h1>
-                            <p style="font-size: 24px; font-weight: unset; margin-top: 35px;">Lorem ipsum dolor sit
+                            <p style="font-size: 24px; font-weight: unset; margin-top: 35px; line-height: unset;">Lorem
+                                ipsum dolor sit
                                 amet,
                                 consectetuer adipiscing elit,
                                 sed diam nonummy nibh
                                 euismod tincidunt ut</p>
                         </div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-9">
                         <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
                             <ul class="uk-slider-items uk-grid">
@@ -472,6 +479,7 @@
         <section class="py-5 contact-home">
             <div class="container-fluid">
                 <div class="row">
+                    <img src="img/doodle-kosmik-2.png" alt="" srcset="" class="doodle">
                     <img src="img/slider-kosmik-3.jpg" class="img-fluid img-contact" alt="...">
                     <div class="col-lg-3">
                         <div class="title-contact">
