--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <div class="col-lg-2">
                             <h3 class="title-featured">Featured titles</h3>
                         </div>
-                        <div class="col-lg-10 slider-featured">
+                        <div class="col-lg-10 col-xs-12 slider-featured">
                             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0"
@@ -391,7 +391,7 @@
         <section class="py-5 news-home" style="border-bottom: 1px solid #000">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-xs-12">
                         <div class="title-new-funfact">
                             <h3>News</h3>
                             <p>Funfact</p>
@@ -407,7 +407,7 @@
                                 euismod tincidunt ut</p>
                         </div>
                     </div>
-                    <div class="col-lg-9">
+                    <div class="col-lg-9 col-xs-12">
                         <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
                             <ul class="uk-slider-items uk-grid">
