--- a/index.html
+++ b/index.html
@@ -507,8 +507,11 @@
         <footer id="footer" class="footer-texts-more-lighten">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6 col-lg-3 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
-                        <img src="img/logo-kosmik.png" class="logo-footer" alt="" srcset="">
+                    <div class="col-lg-12">
+                        <img src="img/logo-kosmik-footer.png" class="logo-footer" alt="" srcset="">\
+                    </div>
+                    <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
+
                         <ul class="list list-unstyled mb-0">
                             <li class="mb-0"><a href="#">About</a></li>
                             <li class="mb-0"><a href="#">Catalog</a></li>
@@ -516,12 +519,15 @@
                             <li class="mb-0"><a href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
+                    <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
                         <ul class="list list-unstyled mb-0">
                             <li class="mb-0"><a href="#">Instagram</a></li>
                             <li class="mb-0"><a href="#">Facebook</a></li>
                             <li class="mb-0"><a href="#">Twitter</a></li>
                         </ul>
+                    </div>
+                    <div class="col-md-4">
+
                     </div>
                     <div class="col-md-6 col-lg-3 list-bussiness-footer">
                         <h6>Bussiness :</h6>
