--- a/index.html
+++ b/index.html
@@ -224,19 +224,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="header-row justify-content-end pb-3 social-hamburger">
-                            <p>Follow us on</p>
-                            <ul class="header-social-icons social-icons social-icons-clean">
-                                <li><a href="https://www.facebook.com/" target="_blank" title="Facebook"><i
-                                            class="bi bi-instagram"></i></a></li>
-                                <li><a href="https://www.twitter.com/" target="_blank" title="Twitter"><i
-                                            class="bi bi-facebook"></i></a></li>
-                                <li><a href="https://www.linkedin.com/" target="_blank" title="Linkedin"><i
-                                            class="bi bi-twitter"></i>
-                                    </a></li>
-                            </ul>
-                        </div>
+                        
                     </div>
+                </div>
+                <div class="header-row justify-content-end pb-3 social-hamburger">
+                    <p>Follow us on</p>
+                    <ul class="header-social-icons social-icons social-icons-clean">
+                        <li><a href="https://www.facebook.com/" target="_blank" title="Facebook"><i
+                                    class="bi bi-instagram"></i></a></li>
+                        <li><a href="https://www.twitter.com/" target="_blank" title="Twitter"><i
+                                    class="bi bi-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/" target="_blank" title="Linkedin"><i
+                                    class="bi bi-twitter"></i>
+                            </a></li>
+                    </ul>
                 </div>
             </div>
         </header>
@@ -322,7 +323,8 @@
                     </div>
                 </div>
             </section>
-            <section class="py-5 newest" style="border-bottom: 1px solid #000;">
+
+            <section class="py-5 newest">
                 <div class="container-fluid">
                     <div class="row">
                         <h3 class="newest-titles">Newest Titles</h3>
@@ -352,7 +354,15 @@
                     </div>
             </section>
 
-            <section class="py-5 about-home" style="border-bottom: 1px solid #000;">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <hr style="background-color: rgb(0,0,0, 0.7); height: 3px; margin: 0 !important">
+                    </div>
+                </div>
+            </div>
+
+            <section class="py-5 about-home">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-2">
@@ -386,9 +396,18 @@
                     </div>
                 </div>
             </section>
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <hr style="background-color: rgb(0,0,0, 0.7); height: 3px; margin: 0 !important">
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-        <section class="py-5 news-home" style="border-bottom: 1px solid #000">
+        <section class="py-5 news-home">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3 col-xs-12">
@@ -475,6 +494,14 @@
                 </div>
             </div>
         </section>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <hr style="background-color: rgb(0,0,0, 0.7); height: 3px; margin: 0 !important">
+                </div>
+            </div>
+        </div>
 
         <section class="py-5 contact-home">
             <div class="container-fluid">
