--- a/index.html
+++ b/index.html
@@ -310,12 +310,14 @@
                                 </div>
                                 <button class="carousel-control-prev" type="button"
                                     data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="uk-position-center-left uk-position-small uk-hidden-hover arrow-slider-news"
+                                    uk-slidenav-previous uk-slider-item="previous"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
                                 <button class="carousel-control-next" type="button"
                                     data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="uk-position-small uk-hidden-hover arrow-slider-news"
+                                    uk-slidenav-next uk-slider-item="next"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
                             </div>
