--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     <div class="col-lg-3 col-xs-12">
                         <div class="title-new-funfact">
                             <h3>News</h3>
-                            <p>Funfact</p>
+                            <p style="text-transform: uppercase;">Funfact</p>
                             <p style="font-size: 16px; font-weight: 300; color: #4d4d4d;">25 Jan 2022 by Lorem Ipsum</p>
                             <h1>JUDUL ARTIKEL
                                 LOREM IPSUM
