Disable about page for presentation purposes

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                         <nav class="collapse">
                                             <ul class="nav nav-pills" id="mainNav">
                                                 <li>
-                                                    <a href="about.html">About</a>
+                                                    <a href="#">About</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Catalog</a>
@@ -159,7 +159,7 @@
                     <nav class="menu-display">
                         <ul style="display: flex;">
                             <li>
-                                <a href="about.html" class="menu">About</a>
+                                <a href="#" class="menu">About</a>
                             </li>
                             <li>
                                 <a href="#" class="menu">Catalog</a>
@@ -208,7 +208,7 @@
                                                 </form>
                                             </li>
                                             <li>
-                                                <a href="about.html">About</a>
+                                                <a href="#">About</a>
                                             </li>
                                             <li>
                                                 <a href="#">Catalog</a>
