Change style and images

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                         <nav class="collapse">
                                             <ul class="nav nav-pills" id="mainNav">
                                                 <li>
-                                                    <a href="#">About</a>
+                                                    <a href="about.html">About</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Catalog</a>
@@ -287,21 +287,21 @@
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <img src="img/slider-kosmik-2.jpg" class="d-block w-100 img-featured" alt="...">
+                                        <img src="img/slider-kosmik-1.jpg" class="d-block w-100 img-featured" alt="...">
                                         <div class="carousel-caption d-none d-md-block content-slider-featured">
                                             <h1>Code Helix</h1>
                                             <p>by Nikki Dibya Wardhana, Bryan Arfiandy</p>
                                         </div>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="10000">
-                                        <img src="img/slider-kosmik-3.jpg" class="d-block w-100 img-featured" alt="...">
+                                        <img src="img/slider-kosmik-2.jpg" class="d-block w-100 img-featured" alt="...">
                                         <div class="carousel-caption d-none d-md-block  content-slider-featured">
                                             <h1>Code Helix</h1>
                                             <p>by Nikki Dibya Wardhana, Bryan Arfiandy</p>
                                         </div>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="10000">
-                                        <img src="img/slider-kosmik.jpg" class="d-block w-100 img-featured" alt="...">
+                                        <img src="img/slider-kosmik-3.jpg" class="d-block w-100 img-featured" alt="...">
                                         <div class="carousel-caption d-none d-md-block  content-slider-featured">
                                             <h1>Code Helix</h1>
                                             <p>by Nikki Dibya Wardhana, Bryan Arfiandy</p>
@@ -332,7 +332,7 @@
                         <h3 class="newest-titles">Newest Titles</h3>
                         <div class="col-lg-6 col-xs-12">
                             <div class="container-newest">
-                                <img src="img/slider-kosmik.jpg" alt="Avatar" class="image-newest">
+                                <img src="img/newest-1.jpg" alt="Avatar" class="image-newest">
                                 <div class="overlay-newest">
                                     <div class="judul-karya-newest">Fluffy Tummy</div>
                                     <p class="kreator-karya-newest">By Bima Eko Saputra, Yachi_chan</p>
@@ -341,7 +341,7 @@
                         </div>
                         <div class="col-lg-6 col-xs-12">
                             <div class="container-newest">
-                                <img src="img/slider-kosmik-2.jpg" alt="Avatar" class="image-newest">
+                                <img src="img/newest-2.jpg" alt="Avatar" class="image-newest">
                                 <div class="overlay-newest">
                                     <div class="judul-karya-newest">Fluffy Tummy</div>
                                     <p class="kreator-karya-newest">By Bima Eko Saputra, Yachi_chan</p>
@@ -434,7 +434,7 @@
                             <ul class="uk-slider-items uk-grid">
                                 <li class="uk-width-4-5">
                                     <div class="uk-panel">
-                                        <img src="img/slider-kosmik.jpg" class="img-news-funfact" alt="">
+                                        <img src="img/news-1.jpg" class="img-news-funfact" alt="">
                                         <div class="uk-position-center uk-text-center">
                                             <!-- <h2 uk-slider-parallax="x: 100,-100">Heading</h2>
                                             <p uk-slider-parallax="x: 200,-200">Lorem ipsum dolor sit amet.</p> -->
@@ -443,7 +443,7 @@
                                 </li>
                                 <li class="uk-width-4-5">
                                     <div class="uk-panel">
-                                        <img src="img/slider-kosmik-2.jpg" class="img-news-funfact" alt="">
+                                        <img src="img/news-2.jpg" class="img-news-funfact" alt="">
                                         <div class="uk-position-center uk-text-center">
                                             <!-- <h2 uk-slider-parallax="x: 100,-100">Heading</h2>
                                             <p uk-slider-parallax="x: 200,-200">Lorem ipsum dolor sit amet.</p> -->
@@ -452,7 +452,7 @@
                                 </li>
                                 <li class="uk-width-4-5">
                                     <div class="uk-panel">
-                                        <img src="img/slider-kosmik-3.jpg" class="img-news-funfact" alt="">
+                                        <img src="img/news-3.jpg" class="img-news-funfact" alt="">
                                         <div class="uk-position-center uk-text-center">
                                             <!-- <h2 uk-slider-parallax="x: 100,-100">Heading</h2>
                                             <p uk-slider-parallax="x: 200,-200">Lorem ipsum dolor sit amet.</p> -->
@@ -509,7 +509,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <img src="img/doodle-kosmik-2.png" alt="" srcset="" class="doodle">
-                    <img src="img/slider-kosmik-3.jpg" class="img-fluid img-contact" alt="...">
+                    <img src="img/banner-kontak.jpg" class="img-fluid img-contact" alt="...">
                     <div class="col-lg-3">
                         <div class="title-contact">
                             <h3>Contact</h3>
