--- a/about.html
+++ b/about.html
@@ -66,6 +66,8 @@
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/css/uikit.min.css" />
 
+    <!-- icon bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
     <!-- Head Libs -->
     <script src="vendor/modernizr/modernizr.min.js"></script>
@@ -77,7 +79,7 @@
         <div class="side-header-narrow-bar desktop">
             <div class="side-header-narrow-bar-logo bg-color-primary d-flex justify-content-center">
                 <a href="index.html" class="p-3 mb-4 mt-2">
-                    <img alt="Porto" width="40" height="40" src="img/logo-planet.png">
+                    <img alt="Porto" width="40" height="40" src="img/logo-planet.png" class="logo-planet">
                 </a>
             </div>
             <div class="side-header-narrow-bar-content d-flex align-items-center text-center h-100">
@@ -149,7 +151,7 @@
             </div>
         </header>
         <header class="header-display desktop">
-            <div class="header-row flex-row justify-content-center">
+            <div class="header-row flex-row justify-content-center py-3">
                 <div class="header-logo-display d-flex">
                     <a href="index.html">
                         <img alt="Kosmik" src="img/logo-kosmik.png" width="120" height="50">
@@ -157,7 +159,7 @@
                     <nav class="menu-display">
                         <ul style="display: flex;">
                             <li>
-                                <a href="about.html" class="menu">About</a>
+                                <a href="#" class="menu">About</a>
                             </li>
                             <li>
                                 <a href="#" class="menu">Catalog</a>
@@ -168,14 +170,11 @@
                             <li>
                                 <a href="#" class="menu">Contact</a>
                             </li>
-                            <li>
-                                <form action="/action_page.php" class="search-menu">
-                                    <input type="text" class="search-home" placeholder="What are you looking for?"
-                                        name="search">
-                                    <button type="submit" class="button-search-home"><i
-                                            class="fa fa-search"></i></button>
-                                </form>
-                            </li>
+                            <form action="/action_page.php" class="search-menu">
+                                <input type="text" class="search-home" placeholder="What are you looking for?"
+                                    name="search">
+                                <button type="submit" class="button-search-home"><i class="fa fa-search"></i></button>
+                            </form>
                         </ul>
                     </nav>
                 </div>
@@ -202,14 +201,14 @@
                                         <ul class="nav nav-pills" id="mainNav">
                                             <li>
                                                 <form action="/action_page.php" class="search-menu">
-                                                    <input type="text" class="search-home"
+                                                    <input type="text" class="search-home-hamburger"
                                                         placeholder="What are you looking for?" name="search">
-                                                    <button type="submit" class="button-search-home"><i
+                                                    <button type="submit" class="button-search-home-hamburger"><i
                                                             class="fa fa-search"></i></button>
                                                 </form>
                                             </li>
                                             <li>
-                                                <a href="about.html">About</a>
+                                                <a href="#">About</a>
                                             </li>
                                             <li>
                                                 <a href="#">Catalog</a>
@@ -225,23 +224,29 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="header-row justify-content-end pb-3">
-                            <ul class="header-social-icons social-icons social-icons-clean">
-                                <li class="social-icons-facebook"><a href="https://www.facebook.com/" target="_blank"
-                                        title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                                <li class="social-icons-twitter"><a href="https://www.twitter.com/" target="_blank"
-                                        title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                                <li class="social-icons-linkedin"><a href="https://www.linkedin.com/" target="_blank"
-                                        title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-                            </ul>
-                        </div>
+                        
                     </div>
+                </div>
+                <div class="header-row justify-content-end pb-3 social-hamburger">
+                    <p>Follow us on</p>
+                    <ul class="header-social-icons social-icons social-icons-clean">
+                        <li><a href="https://www.facebook.com/" target="_blank" title="Facebook"><i
+                                    class="bi bi-instagram"></i></a></li>
+                        <li><a href="https://www.twitter.com/" target="_blank" title="Twitter"><i
+                                    class="bi bi-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/" target="_blank" title="Linkedin"><i
+                                    class="bi bi-twitter"></i>
+                            </a></li>
+                    </ul>
                 </div>
             </div>
         </header>
 
-
-
+        <style>
+            .header-display.desktop {
+                background-color: #000;
+            }
+        </style>
 
         <section style="background-color: #000;" class="py-5 first-section-about">
             <div class="container-fluid">
@@ -315,97 +320,6 @@
                 </div>
             </div>
         </section>
-
-
-        <!-- <section class="py-5 section-our-team">
-            <div class="container-fluid">
-                <div class="title-our-team">
-                    <h3>Our Team</h3>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3 col-xs-6">
-                        <div class="our-team">
-                            <img src="img/team-kosmik-9.png" alt="Card Back" class="img-before-hover">
-                            <img src="img/team-kosmik-9-1.png" class="img-top" alt="Card Front">
-                            <div class="detail-team">
-                                <h4>Sunny Gho</h4>
-                                <p>CEO</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-xs-6">
-                        <div class="our-team">
-                            <img src="img/team-kosmik-1.png" alt="Card Back" class="img-before-hover">
-                            <img src="img/team-kosmik-1.png" class="img-top" alt="Card Front">
-                            <div class="detail-team">
-                                <h4>Sunny Gho</h4>
-                                <p>CEO</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-xs-6">
-                        <div class="our-team">
-                            <img src="img/team-kosmik-2.png" alt="Card Back" class="img-before-hover">
-                            <img src="img/team-kosmik-2.png" class="img-top" alt="Card Front">
-                            <div class="detail-team">
-                                <h4>Sunny Gho</h4>
-                                <p>CEO</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-xs-6">
-                        <div class="our-team">
-                            <img src="img/team-kosmik-3.png" alt="Card Back" class="img-before-hover">
-                            <img src="img/team-kosmik-3.png" class="img-top" alt="Card Front">
-                            <div class="detail-team">
-                                <h4>Sunny Gho</h4>
-                                <p>CEO</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-xs-6">
-                        <div class="our-team">
-                            <img src="img/team-kosmik-4.png" alt="Card Back" class="img-before-hover">
-                            <img src="img/team-kosmik-4.png" class="img-top" alt="Card Front">
-                            <div class="detail-team">
-                                <h4>Sunny Gho</h4>
-                                <p>CEO</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-xs-6">
-                        <div class="our-team">
-                            <img src="img/team-kosmik-5.png" alt="Card Back" class="img-before-hover">
-                            <img src="img/team-kosmik-5.png" class="img-top" alt="Card Front">
-                            <div class="detail-team">
-                                <h4>Sunny Gho</h4>
-                                <p>CEO</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-xs-6">
-                        <div class="our-team">
-                            <img src="img/team-kosmik-6.png" alt="Card Back" class="img-before-hover">
-                            <img src="img/team-kosmik-6.png" class="img-top" alt="Card Front">
-                            <div class="detail-team">
-                                <h4>Sunny Gho</h4>
-                                <p>CEO</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-xs-6">
-                        <div class="our-team">
-                            <img src="img/team-kosmik-7.png" alt="Card Back" class="img-before-hover">
-                            <img src="img/team-kosmik-7.png" class="img-top" alt="Card Front">
-                            <div class="detail-team">
-                                <h4>Sunny Gho</h4>
-                                <p>CEO</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
 
         <section class="py-5 section-our-team">
             <div class="container-fluid">
@@ -513,64 +427,51 @@
                     </div>
                 </div>
             </div>
-    </div>
-    </div>
-    </section>
+        </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <footer id="footer" class="footer-texts-more-lighten">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6 col-lg-3 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
-                    <img src="img/logo-kosmik.png" class="logo-footer" alt="" srcset="">
-                    <ul class="list list-unstyled mb-0">
-                        <li class="mb-0"><a href="#">About</a></li>
-                        <li class="mb-0"><a href="#">Catalog</a></li>
-                        <li class="mb-0"><a href="#">News</a></li>
-                        <li class="mb-0"><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-6 col-lg-4 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
-                    <ul class="list list-unstyled mb-0">
-                        <li class="mb-0"><a href="#">Instagram</a></li>
-                        <li class="mb-0"><a href="#">Facebook</a></li>
-                        <li class="mb-0"><a href="#">Twitter</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-6 col-lg-3 list-bussiness-footer">
-                    <h6>Bussiness :</h6>
-                    <p>email bussiness kosmik@gmail.com</p>
-                    <p>+62 888 xxxx xxxx</p>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="footer-copyright footer-copyright-style-2 pt-4 pb-5">
+        <footer id="footer" class="footer-texts-more-lighten">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12">
-                        <p class="mb-0">© Kosmik 2022. All Rights Reserved</p>
+                    <div class="col-lg-12">
+                        <img src="img/logo-kosmik-footer.png" class="logo-footer" alt="" srcset="">\
+                    </div>
+                    <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
+
+                        <ul class="list list-unstyled mb-0">
+                            <li class="mb-0"><a href="#">About</a></li>
+                            <li class="mb-0"><a href="#">Catalog</a></li>
+                            <li class="mb-0"><a href="#">News</a></li>
+                            <li class="mb-0"><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-md-0 list-sosial-media-footer">
+                        <ul class="list list-unstyled mb-0">
+                            <li class="mb-0"><a href="#">Instagram</a></li>
+                            <li class="mb-0"><a href="#">Facebook</a></li>
+                            <li class="mb-0"><a href="#">Twitter</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+
+                    </div>
+                    <div class="col-md-6 col-lg-3 list-bussiness-footer">
+                        <h6>Bussiness :</h6>
+                        <p>email bussiness kosmik@gmail.com</p>
+                        <p>+62 888 xxxx xxxx</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+            <div class="container-fluid">
+                <div class="footer-copyright footer-copyright-style-2 pt-4 pb-5">
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="mb-0">© Kosmik 2022. All Rights Reserved</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
-
 
     <!-- Vendor -->
     <script data-cfasync="false" src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
